[metadata]
name = cmdy
version = 0.0.1
author = Jongsoo Yoon
author_email = gamus123@gmail.com
summary = Automatically-generated command completion built on argparse
description-file = README.md
home_page = 

requires-dist = argparse; python_version < '2.7'

[files]
packages = cmdy
extra_files =
resources =
